--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.19 (unreleased)
+
+** tests: Disabled floating point test, and corrections
+in pkcs12 decoding tests.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.18 (released 2012-04-02)
 
 ** certtool: Avoid a Y2K38 bug when generating certificates.
