--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.0 (unreleased)
+
+** libgnutls: xxx
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.19 (unreleased)
 
 ** libgnutls: gnutls_record_check_pending() no longer
