--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,8 @@ See the end for copying conditions.
 
 * Version 3.1.0 (unreleased)
 
-** libgnutls: xxx
+** libgnutls: When decoding a PKCS #11 URL the pin-source field
+is assumed to be a file that stores the pin.
 
 ** API and ABI modifications:
 No changes since last version.
