--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,8 @@ See the end for copying conditions.
 Version 2.12.19 (unreleased)
 
 ** libgnutls: When decoding a PKCS #11 URL the pin-source field
-is assumed to be a file that stores the pin.
+is assumed to be a file that stores the pin. Based on patch
+by David Smith.
 
 ** minitasn1: Upgraded to libtasn1 version 2.13 (pre-release).
 
