documentation and comment fixes
Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/NEWS
+++ b/NEWS
@@ -142,7 +142,7 @@ No changes since last version.
 ** gnutls-cli: added the --ocsp option which will verify
 the peer's certificate with OCSP.
 
-** gnutls-cli: added the --tofu and if specified, gnutls-cli
+** gnutls-cli: added the --tofu option and if specified, gnutls-cli
 will use an ssh-style authentication method.
 
 ** gnutls-cli: if no --x509cafile is provided a default is
