--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.19 (unreleased)
+* Version 3.0.19 (released 2012-04-22)
 
 ** libgnutls: When decoding a PKCS #11 URL the pin-source field
 is assumed to be a file that stores the pin. Based on patch
@@ -11,6 +11,9 @@ by David Smith.
 ** libgnutls: gnutls_record_check_pending() no longer
 returns unprocessed data, and thus ensure the non-blocking
 of the next call to gnutls_record_recv(). 
+
+** libgnutls: Added strict tests in Diffie-Hellman and
+SRP key exchange public keys.
 
 ** libgnutls: in ECDSA and DSA TLS 1.2 authentication be less
 strict in hash selection, and allow a stronger hash to
