--- a/doc/cha-library.texi
+++ b/doc/cha-library.texi
@@ -89,7 +89,7 @@ A few @code{configure} options may be relevant, summarized below.
 They disable or enable particular features,
 to create a smaller library with only the required features.
 Note however, that although a smaller library is generated, the
-included programs are not guarranteed to compile if some of these
+included programs are not guaranteed to compile if some of these
 options are given.
 
 @verbatim
