--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 3.1.0 (unreleased)
 
+** libgnutls: requires libnettle 2.5.
+
 ** libgnutls: Use the PKCS #1 1.5 encoding provided by nettle (2.5)
 for encryption and signatures.
 
