--- a/NEWS
+++ b/NEWS
@@ -16,11 +16,24 @@ by David Smith.
 ** libgnutls: introduce gnutls_certificate_set_x509_system_trust
 which imports the trusted root CA's from a compile time defined location. 
 
+** libgnutls: Added GNUTLS_CERT_SIGNATURE_FAILURE to differentiate between
+generic errors and signature verification errors in the verification
+functions.
+
+** libgnutls: Added gnutls_pkcs12_simple_parse() as a helper function
+to simplify parsing in most PKCS #12 use cases.
+
+** libgnutls: gnutls_certificate_set_x509_simple_pkcs12_file() adds
+the whole certificate chain (if any) to the credentials structure, instead
+of only the end-user certificate.
+
 ** libgnutlsxx: Added session::set_transport_vec_push_function. Patch
 by Alexandre Bique.
 
 ** API and ABI modifications:
+GNUTLS_CERT_SIGNATURE_FAILURE: Added
 gnutls_pubkey_verify_hash2: Added
+gnutls_pkcs12_simple_parse: Added
 gnutls_certificate_set_x509_system_trust: Added
 gnutls_pkcs11_obj_list_import_url2: Added
 gnutls_x509_trust_list_add_system_trust: Added
