--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.20 (unreleased)
+* Version 3.0.20 (released 2012-06-05)
 
 ** libgnutls: Corrected bug which prevented the parsing of
 handshake packets spanning multiple records.
