--- a/doc/cha-upgrade.texi
+++ b/doc/cha-upgrade.texi
@@ -38,7 +38,7 @@ as described in @ref{Asynchronous operation}
 @item @funcintref{gnutls_session_get_server_random},
 @funcintref{gnutls_session_get_client_random} 
 @tab 
-They are replaced by the safer function @ref{gnutls_session_get_random}
+They are replaced by the safer function @funcref{gnutls_session_get_random}
 
 @item @funcintref{gnutls_session_get_master_secret} 
 @tab Replaced by the keying material exporters discussed in @ref{Keying Material Exporters}
