--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.21 (unreleased)
+
+** libgnutls: Fixed memory leak in PKCS #8 key import.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.20 (released 2012-06-05)
 
 ** libgnutls: Corrected bug which prevented the parsing of
