added author of code.

--- a/AUTHORS
+++ b/AUTHORS
@@ -74,6 +74,9 @@ Win32 patches.
 Andy Polyakov <appro [at] openssl.org>
 AES-NI and Padlock assembler code (at lib/accelerated/intel/asm/)
 
+David Woodhouse <dwmw2 [at] infradead.org>
+DTLS 0.9 implementation.
+
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
