--- a/THANKS
+++ b/THANKS
@@ -128,6 +128,7 @@ Eli Zaretskii                   *eliz [at] gnu.org*
 Patrick Pelletier               *code [at] funwithsoftware.org*
 Sean Buckheister                *s_buckhe [at] cs.uni-kl.de*
 Matthew Hall                    *mhall [at] mhcomputing.net*
+Lucas Fisher                    *lucas.fisher [at] gmail.com*
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
