--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -430,7 +430,19 @@ algorithm preferences. To get those preferences use
 The functions above do not handle the requested server name automatically.
 A server would need to check the name requested by the client
 using @funcref{gnutls_server_name_get}, and serve the appropriate
-certificate.
+certificate. Note that some of these functions require the @code{gnutls_pcert_st} structure to be
+filled in. Helper functions to make the required structures are listed below.
+
+@verbatim
+typedef struct gnutls_pcert_st
+{
+  gnutls_pubkey_t pubkey;
+  gnutls_datum_t cert;
+  gnutls_certificate_type_t type;
+} gnutls_pcert_st;
+@end verbatim
+
+@showfuncE{gnutls_pcert_import_x509,gnutls_pcert_import_openpgp,gnutls_pcert_import_x509_raw,gnutls_pcert_import_openpgp_raw,gnutls_pcert_deinit}
 
 In a handshake, the negotiated cipher suite depends on the
 certificate's parameters, so some key exchange methods might not be
