--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -413,7 +413,13 @@ already.
 
 @showfuncC{gnutls_certificate_set_x509_key_mem,gnutls_certificate_set_x509_key,gnutls_certificate_set_x509_key_file}
 
-@showfuncD{gnutls_certificate_set_openpgp_key_mem,gnutls_certificate_set_openpgp_key,gnutls_certificate_set_openpgp_key_file,gnutls_certificate_set_key}
+@showfuncC{gnutls_certificate_set_openpgp_key_mem,gnutls_certificate_set_openpgp_key,gnutls_certificate_set_openpgp_key_file}
+
+If the imported keys and certificates need to be accessed before any TLS session
+is established, it is convenient to use @funcref{gnutls_certificate_set_key}
+in combination with @funcref{gnutls_pcert_import_x509_raw} and @funcref{gnutls_privkey_import_x509_raw}.
+
+@showfuncdesc{gnutls_certificate_set_key}
 
 If multiple certificates are used with the functions above each
 client's request will be served with the certificate that matches the
