Added gnutls_pkcs11_advset_pin_function and gnutls_pkcs11_advset_token_function

--- a/doc/cha-cert-auth2.texi
+++ b/doc/cha-cert-auth2.texi
@@ -432,6 +432,10 @@ are sharing a module. To avoid this problem GnuTLS uses @acronym{p11-kit}
 that provides a middleware to control access to resources over the
 multiple users.
 
+To avoid conflicts with multiple registered callbacks for PIN and token functions,
+the following two functions set the callbacks if they have not already been set.
+@showfuncB{gnutls_pkcs11_advset_pin_function,gnutls_pkcs11_advset_token_function}
+
 Moreover PKCS #11 modules must be reinitialized on the child processes
 after a @funcintref{fork}. @acronym{GnuTLS} provides @funcref{gnutls_pkcs11_reinit}
 to be called for this purpose.
